# CadexTest

./: CadTest.sln  README.md
CadTest/: CMakeLists.txt  CadTest.cpp  CadTest.vcxproj  CadTest.vcxproj.filters
CadTest/src/: Circle.cpp  Circle.h  Curve.cpp  Curve.h  Ellipse.cpp  Ellipse.h  Helix.cpp  Helix.h
